[gd_scene load_steps=5 format=3 uid="uid://daq7i7hmf46n1"]

[ext_resource type="Script" path="res://scenes/separation.gd" id="1_mwllu"]
[ext_resource type="PackedScene" uid="uid://m5umky4rracn" path="res://scenes/background.tscn" id="2_dicu5"]
[ext_resource type="PackedScene" uid="uid://dgkimfs7fad4j" path="res://scenes/playerkinematic.tscn" id="3_ebgrp"]
[ext_resource type="PackedScene" uid="uid://yv7e7vu2h13t" path="res://scenes/character.tscn" id="4_cyxws"]

[node name="separation" type="Node2D"]
script = ExtResource("1_mwllu")

[node name="Background" parent="." instance=ExtResource("2_dicu5")]
position = Vector2(0, 1)

[node name="Player" parent="." instance=ExtResource("3_ebgrp")]
position = Vector2(526, 119)

[node name="Character" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(563, 299)

[node name="Character4" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(517, 335)

[node name="Character5" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(549, 392)

[node name="Character6" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(578, 374)

[node name="Character7" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(551, 357)

[node name="Character8" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(517, 384)

[node name="Character9" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(517, 311)

[node name="Character2" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(545, 302)

[node name="Character3" parent="." instance=ExtResource("4_cyxws")]
position = Vector2(537, 333)
